Add ClassImportIntegrator example which excludes the parent package name